src/objects/EmailToCaseAddOns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold additional values to apply to cases created via the Email-to-Case functionality</description>
    <fields>
        <fullName>Case_Business_Hours__c</fullName>
        <label>Case Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Organization__c</fullName>
        <label>Case Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EmailToCaseAddOns</label>
</CustomObject>